kubernetes-templating/frontend/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
  labels:
    app: frontend
  name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: shop.158.160.35.217.nip.io
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
  - hosts:
      - shop.158.160.35.217.nip.io
    secretName: shop-tls
